feat: 상담 등록시 유사 메뉴얼 조회 기능 구현
